[package]
name = "sentinel"
version = "0.1.0"
edition = "2024"
description = "Async file and storage watching with typed deserialization, supporting local filesystem and NATS JetStream KV backends"
license = "MIT"
readme = "README.md"
keywords = ["file-watcher", "hot-reload", "nats", "config", "async"]
categories = ["filesystem", "asynchronous", "config"]

[features]
default = ["fs"]
serde = ["dep:serde", "dep:serde_json", "dep:serde_yaml_ng"]
nats = ["dep:async-nats"]
fs = ["dep:notify"]

[dependencies]
# Async
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tokio = { version = "1.50", features = ["fs"] }

# SerDe
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml_ng = { version = "0.10", optional = true }

# File systems
notify = { version = "8.2", optional = true }
async-nats = { version = "0.46", optional = true }

# Signal
postage = { version = "0.5" }

# Error Handling
thiserror = { version = "2.0" }
color-eyre = { version = "0.6" }
miette = { version = "7.6" }

# Instrumentation
tracing = { version = "0.1" }
